chore(report): remove started state for release reports
